test_src/compiler_errors/types/auto/AutoError2.b
class AutoError2 {
    void test() {
        auto x = 1;
        x = 2.0;
        println(x);
    }
}
